--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -55,7 +55,7 @@
                   'image': partner.image,
                   'description': partner.description,
                   'link': link,
-                  'email': partner.email
+                  'email': partner.user.email
                   }) }}
               {% else %}
                 <div class="alert alert-danger" role="alert">
