--- a/templates/franchise/show_admin.html.twig
+++ b/templates/franchise/show_admin.html.twig
@@ -31,7 +31,7 @@
       </div>
       <div class="d-flex border-bottom p-1">
         <p class="partner-show-fields"><b>Email:</b></p>
-        <p>{{ franchise.Email }}</p>
+        <p>{{ franchise.user.Email }}</p>
       </div>
 
       <div class="d-flex border-bottom p-1">
