--- a/templates/partner/_card.html.twig
+++ b/templates/partner/_card.html.twig
@@ -16,7 +16,7 @@
     <div class='box-over d-flex flex-row' >
       <div class='card-body box-over-item'></div>
       <div class='box-over-item-white px-4 py-3 box-over-active'>
-        <h4 class='card-title'>{{name}}</h4>
+        <h4 class='card-title'>{{ name }}</h4>
       </div>
     </div>
 
@@ -41,8 +41,9 @@
 
       <div class='d-flex justify-content-between align-items-center px-4 pt-4'>
         
-        <small><img src="https://www.svgrepo.com/show/427089/packet.svg" class="mx-2" width="20px" />
-          {{ email }}
+        <small>
+          <img src="https://www.svgrepo.com/show/427089/packet.svg" class="mx-2" width="20px" />
+          {{ partner.user.email }}
         </small>
         <a href="{{ link }}{{ id }}" class='btn btn-outline-success'>
           {{ button_label|default('Go') }}  
