Date fields added to Franchise and Partner, forms and views

--- a/templates/franchise/_card.html.twig
+++ b/templates/franchise/_card.html.twig
@@ -51,7 +51,7 @@
 
     </div>
     <div class="card-footer">
-      <small class="text-muted">Franchisé depuis le 25/05/2016</small>
+      <small class="text-muted">Franchisé depuis le {{ franchise.date|date("d/m/Y") }}</small>
     </div>
 
   </div>
