--- a/templates/partner/_card.html.twig
+++ b/templates/partner/_card.html.twig
@@ -55,7 +55,7 @@
 
     </div>
     <div class="card-footer">
-      <small class="text-muted">Partner depuis le 25/05/2016</small>
+      <small class="text-muted">Partner depuis le {{ partner.date|date("d/m/Y") }}</small>
     </div>
 
   </div>
