Adding new adminPassword variable into the fixtures and some small bugs with views fixed

--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -5,7 +5,7 @@
     <br><br>
     <p>Utilisateur: {{ user.email }}</p>
     <p>Mot de passe: 123456</p>
-    <a href="{{ signedUrl }}">Confirm my Email</a>.
+    <a href="{{ signedUrl }}">Confirmer mon Email</a>.
     Ce lien expirera en {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
 </p>
 
