Container lg-8 added to Users Index

--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}User index{% endblock %}
 
 {% block body %}
+<div class="container col-lg-8">
     {# Header section #}
     <section class="d-flex flex-column flex-md-row justify-content-between align-items-center">
       <h1 class="col-12 text-center text-md-start col-md-6">Utilisateurs</h1>
@@ -65,5 +66,5 @@
         <p>Il n'y a pas d'utilisateurs dans la base de données</p>
     {% endfor %}
     </article>
-
+</div>
 {% endblock %}
