--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -1,12 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
-
-$primary: orange;
+@import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body{
   height: 100vh;
   margin: 0;
   display: flex;
   flex-direction: column;
+  //font-family: 'Gochi Hand', cursive;
+  // font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h1{
@@ -67,11 +71,6 @@ footer{
 
 .franchise-title{
   background-color: $primary;
-}
-
-.partner-title{
-  background-color: lightseagreen;
-
 }
 
 // FORMS CUSTOM CSS
@@ -263,21 +262,14 @@ form fieldset{
 }
 .partner-card-container{
   max-height: 200px;
-  // position: relative;
 }
 .partner-card-show {
   width: 100%;
   overflow: hidden;
-  // position: absolute;
-  // top: -100px;
 }
 
 .partner-show-fields{
   width: 180px;
-}
-
-.user-table-fields{
-  //width: 200px;
 }
 
 // LEGAL DOCS
@@ -303,7 +295,7 @@ form fieldset{
 }
 
 body {
-  background-color: var(--bg-color)!important;
+  // background-color: var(--bg-color)!important;
   color: var(--text-color) !important;
 }
 
