--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AdminController!{% endblock %}
+{% block title %}Panneau d'administration{% endblock %}
 
 {% block body %}
 <style>
