Delete all references to DarkMode + add parent() to partner/new

--- a/templates/partner/new.html.twig
+++ b/templates/partner/new.html.twig
@@ -18,6 +18,8 @@
 {% endblock %}
 
 {% block javascripts %}
+  {# let the menu load #}
+  {{ parent() }} 
   <script>
     window.onload = () => {
       let franchise = document.querySelector("#partner_franchise");
