--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+$primary: orange;
 
 body{
   height: 100vh;
   margin: 0;
   display: flex;
   flex-direction: column;
-  //font-family: 'Gochi Hand', cursive;
-  // font-family: 'Roboto', sans-serif;
-  font-family: 'Montserrat', sans-serif;
+  //font-family: 'Roboto', sans-serif !important;
+  font-family: 'Montserrat', sans-serif !important;
 }
 
 h1{
@@ -91,6 +91,13 @@ form fieldset{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+#search_partner,
+.custom-active-check {
+  // display: flex;
+  // flex-direction: row;
+  // flex-wrap: wrap;
 }
 
 #partner_permissions input[type="checkbox"],
@@ -276,30 +283,3 @@ form fieldset{
 .legal-text{
   text-align: justify;
 }
-
-// DARK MODE
-
-.dark-mode {
-  font-size: 25px;
-  cursor: pointer;
-}
-
-[data-theme="light"] {
-  --bg-color: #ffffff;
-  --text-color: #21232f;
-}
-
-[data-theme="dark"] {
-  --bg-color: #21232f;
-  --text-color: #ffffff;
-}
-
-body {
-  // background-color: var(--bg-color)!important;
-  color: var(--text-color) !important;
-}
-
-.hidden-icon {
-  display: none;
-}
-// DARK MODE
