All page titles undle block title updated

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Admin Dashboard TodayFit{% endblock %}
+{% block title %}Administration TodayFit{% endblock %}
 
 {% block body %}
 <style>
