--- a/templates/legal_pages/conditions.html.twig
+++ b/templates/legal_pages/conditions.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello LegalPagesController!{% endblock %}
+{% block title %}Conditions Générales{% endblock %}
 
 {% block body %}
 <div class="container">
