--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Partners{% endblock %}
+{% block title %}Structures{% endblock %}
 
 {% block body %}
     {# Header section #}
