--- a/templates/partner/show.html.twig
+++ b/templates/partner/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Partner{% endblock %}
+{% block title %}Structures{% endblock %}
 
 {% block body %}
   {% if app.user.roles[0] == "ROLE_ADMIN" or app.user.roles[0] == "ROLE_SUPER_ADMIN" %}
