--- a/templates/registration/redirect_to_website.html.twig
+++ b/templates/registration/redirect_to_website.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Email Verification{% endblock %}
+{% block title %}Verification d'email{% endblock %}
 
 {% block body %}
 <section class="container bg-light p-5 text-center">
