--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Mot de passe{% endblock %}
 
 {% block body %}
 <section class="container col-md-8 col-xl-6 bg-light py-5 px-4 custom-form">
