--- a/templates/partner/edit.html.twig
+++ b/templates/partner/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Editer Partner{% endblock %}
+{% block title %}Editer Structure{% endblock %}
 
 {% block body %}
 <section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
