--- a/templates/permission/new.html.twig
+++ b/templates/permission/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Permission{% endblock %}
+{% block title %}Nouvelle Permission{% endblock %}
 
 {% block body %}
 <section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
