--- a/templates/security/logged.html.twig
+++ b/templates/security/logged.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}You are Logged!{% endblock %}
+{% block title %}Vous êtes conecté!{% endblock %}
 
 {% block body %}
 <section class="container col-md-8 col-xl-6 bg-light py-5 px-4 custom-form">
