All page titles undle block title updated

--- a/templates/permission/index.html.twig
+++ b/templates/permission/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Permission index{% endblock %}
+{% block title %}Permissions{% endblock %}
 
 {% block body %}
 <div class="container col-lg-8">
