CSS cols adjusted in Users Index

--- a/templates/user/_formUserSearch.html.twig
+++ b/templates/user/_formUserSearch.html.twig
@@ -3,16 +3,16 @@
 
 {{ form_start(form) }}
     <div class="row d-flex flex-wrap justify-content-between">
-      <div class="col-9 col-lg-6 col-xl-7 mb-2">
+      <div class="col-9 col-xl-5 mb-2">
           {{ form_widget(form.input_data) }}
       </div>
-      <div class="col-3 col-lg-2 mb-2" id="search_partner">
+      <div class="col-3 col-xl-3 mb-2" id="search_partner">
           {{ form_widget(form.type) }}
       </div>
-      <div class="col-9 col-lg-2">
+      <div class="col-9 col-xl-2">
           {{ form_widget(form.Chercher) }}
       </div>
-      <div class="col-3 col-lg-2 col-xl-1">
+      <div class="col-3 col-xl-2">
         <a class="btn btn-outline-danger btn-reset" href="{{ path('app_user_index') }}"><b>X</b></a>
       </div>
       {{ form_rest(form) }}
