Some english word to french

--- a/templates/franchise/index.html.twig
+++ b/templates/franchise/index.html.twig
@@ -111,7 +111,7 @@
               <thead>
                 <tr>
                   <th>Id</th>
-                  <th>Name</th>
+                  <th>Nom</th>
                   <th>Email</th>
                   <th>Structures</th>
                   <th>Permissions</th>
