--- a/templates/partner/edit.html.twig
+++ b/templates/partner/edit.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Editer Structure{% endblock %}
+{% block title %}Modifier Structure{% endblock %}
 
 {% block body %}
 <section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
 
-    <h1>Editer Structure</h1>
+    <h1>Modifier Structure</h1>
 
     {{ include('partner/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
     {{ include('partner/_delete_form.html.twig') }}
