--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -112,11 +112,11 @@
                 <thead>
                     <tr>
                         <th>Id</th>
-                        <th>Name</th>
+                        <th>Nom</th>
                         <th>Franchise</th>
                         <th>Email</th>
-                        <th>User</th>
-                        <th>Address</th>
+                        <th>Utilisateur</th>
+                        <th>Adresse</th>
                         <th>Permissions</th>
                         <th>Active</th>
                         <th>Actions</th>
