--- a/templates/permission/edit.html.twig
+++ b/templates/permission/edit.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Editer Permission{% endblock %}
+{% block title %}Modifier Permission{% endblock %}
 
 {% block body %}
 <section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
     <div class="d-flex flex-row col-12">
-      <h1 class="col-10">Editer Permission</h1>
+      <h1 class="col-10">Modifier Permission</h1>
       <img src="https://www.svgrepo.com/show/340721/no-image.svg" alt="Today Fit Permission Image" width="50px" class="col-2" id="permission-image">
     </div>
 
