--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -20,7 +20,7 @@
         <p class="col-1 col-lg-1"><b>Id:</b></p>
         <p class="col-11 col-lg-1">{{ user.id }}</p>
           {% if user.franchise %}
-            <p class="col-3 my-1 col-lg-2"><b>Name:</b></p>
+            <p class="col-3 my-1 col-lg-2"><b>Nom:</b></p>
             <span class="col-9 my-1 col-lg-3 col-xl-2">{{ user.franchise.name }}</span>
             <p class="col-12 my-2 col-lg-2"><b>Type:</b></p>
             <span class="col-12 mt-1 mb-2 col-lg-3 text-center franchise-title"><b>Franchise</b></span>
@@ -29,7 +29,7 @@
             <p class="col-4 col-xl-2"><b>Personnel:</b></p>
             <p class="col-8 col-xl-4">{{ user.franchise.email }}</p>
           {% elseif user.partner %}
-            <p class="col-3 my-1 col-lg-2"><b>Name:</b></p>
+            <p class="col-3 my-1 col-lg-2"><b>Nom:</b></p>
             <span class="col-9 my-1 col-lg-3 col-xl-2">{{ user.partner.name }}</span>
             <p class="col-12 my-2 col-lg-2"><b>Type:</b></p>          
             <span class="col-12 mt-1 mb-2 col-lg-3 text-center partner-title"><b>Structure</b></span>
