--- a/templates/franchise/edit.html.twig
+++ b/templates/franchise/edit.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Editer Franchise{% endblock %}
+{% block title %}Modifier Franchise{% endblock %}
 
 {% block body %}
 <section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
 
-    <h1>Editer Franchise</h1>
+    <h1>Modifier Franchise</h1>
 
     {{ include('franchise/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
     {{ include('franchise/_delete_form.html.twig') }}
