--- a/templates/permission/show.html.twig
+++ b/templates/permission/show.html.twig
@@ -12,15 +12,15 @@
                 <td>{{ permission.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>Nom</th>
                 <td>{{ permission.name }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_permission_index') }}">back to list</a>
+    <a href="{{ path('app_permission_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('app_permission_edit', {'id': permission.id}) }}">edit</a>
+    <a href="{{ path('app_permission_edit', {'id': permission.id}) }}">Modifier</a>
 
     {{ include('permission/_delete_form.html.twig') }}
 {% endblock %}
