English words in forms to french

--- a/templates/permission/new.html.twig
+++ b/templates/permission/new.html.twig
@@ -12,7 +12,7 @@
 
     {{ include('permission/_form.html.twig') }}
 
-    <a href="{{ path('app_permission_index') }}" class="my-3 btn btn-outline-primary">Retourner à la liste</a>
+    <a href="{{ path('app_permission_index') }}" class="my-3 btn btn-warning">Retourner à la liste</a>
 </section>
 {% endblock %}
 
