--- a/templates/partner/new.html.twig
+++ b/templates/partner/new.html.twig
@@ -11,7 +11,7 @@
 
       {{ include('partner/_form.html.twig') }}
 
-      <a href="{{ path('app_partner_index') }}" class="my-3 btn btn-outline-primary">Liste des Structures</a>
+      <a href="{{ path('app_partner_index') }}" class="my-3 btn btn-warning">Liste des Structures</a>
     </section>
   </div>
 </section>
