--- a/templates/react/index.html.twig
+++ b/templates/react/index.html.twig
@@ -1,9 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ReactController!{% endblock %}
+{% block title %}React Controller{% endblock %}
 
 {% block body %}
 <div class="react-test-wrapper">
-  
+  <h1>React Controller</h1>
+  <section id="react-test-section">
+    <div>
+      
+    </div>
+  </section>
 </div>
 {% endblock %}
