Franchises loading and being filtered in react index file

--- a/templates/react/index.html.twig
+++ b/templates/react/index.html.twig
@@ -10,8 +10,7 @@
       {# <p>Current User -> {{ app.user.email }}</p>
       <p>First Franchise -> {{ variable }}</p>
       <div {{ react_component('FranchisesComponent', { 'variable': variable }) }}></div> #}
-      {{ dump(franchises) }}
-      <div {{ react_component('Franchises', { 'propsFranchises': franchises|json_encode }) }}></div>
+      <div {{ react_component('Franchises', { 'variable': variable })}}></div>
     </div>
   </section>
 </div>
