filter works well. Bug on click on filter when page is loading

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -290,6 +290,23 @@ form fieldset{
   width: 180px;
 }
 
+// FILTER
+.active-filter {
+  list-style: none;
+
+  li{
+    border: $primary solid 1px;
+    border-radius: 5px;
+    margin: 0 5px;
+    padding: 5px 7px;
+  }
+}
+
+.filter-active{
+  background-color: $primary;
+  font-weight: bolder;
+}
+
 // LEGAL DOCS
 .legal-text{
   text-align: justify;
