Pagination filtered implemented - pagination browsing system to do

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -104,12 +104,12 @@ form fieldset{
   flex-wrap: wrap;
 }
 
-#search_partner,
-.custom-active-check {
-  // display: flex;
-  // flex-direction: row;
-  // flex-wrap: wrap;
-}
+// #search_partner,
+// .custom-active-check {
+//   // display: flex;
+//   // flex-direction: row;
+//   // flex-wrap: wrap;
+// }
 
 #partner_permissions input[type="checkbox"],
 #franchise_permissions input[type="checkbox"],
@@ -305,6 +305,29 @@ form fieldset{
 .filter-active{
   background-color: $primary;
   font-weight: bolder;
+}
+
+// PAGINATION
+.arrow {
+  &::before {
+    position: relative;
+    /* top: 3pt; Uncomment this to lower the icons as requested in comments*/
+    content: '';
+    /* By using an em scale, the arrows will size with the font */
+    display: inline-block;
+    width: 0.4em;
+    height: 0.4em;
+    border-right: 0.12em solid rgba(0, 0, 0, 0.87);
+    border-top: 0.12em solid rgba(0, 0, 0, 0.87);
+  }
+
+  &.left {
+    transform: rotate(-135deg) translate(-50%);
+  } 
+
+  &.right {
+    transform: rotate(45deg);
+  }
 }
 
 // LEGAL DOCS
