--- a/templates/react/index.html.twig
+++ b/templates/react/index.html.twig
@@ -12,7 +12,8 @@
           <h2 className="fw-bold lh-1 mb-4 mb-sm-0 text-uppercase strokeme">TODAYFIT</h2>
         </div>
         
-        <div {{ react_component('Franchises', { 'variable': variable })}}></div>
+        {# <div {{ react_component('Franchises', { 'variable': variable })}}></div> #}
+        <div {{ react_component('Franchises')}}></div>
 
       </div>
     </div>
