--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -1,4 +1,6 @@
-@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 body {
   height: 100vh;
   margin: 0;
@@ -9,11 +11,26 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  font-family: 'Montserrat', sans-serif !important;
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-family: 'Russo One', sans-serif;
+}
+
+h2 {
+  font-size: 2.5rem;
+  font-family: 'Russo One', sans-serif;
 }
 
 footer {
   min-height: 100px;
   margin-top: auto;
+}
+
+.dashboard-card-link {
+  text-decoration: none;
 }
 
 .custom-form {
@@ -40,10 +57,18 @@ footer {
   background: lightcoral;
 }
 
-.franchise-title, .partner-title {
-  color: white;
+.franchise-title,
+.partner-title {
   padding: 5px 10px;
   border-radius: 10px;
+}
+
+.franchise-title {
+  color: #684402;
+}
+
+.partner-title {
+  color: #0a5753;
 }
 
 .franchise-title {
@@ -54,7 +79,7 @@ footer {
   background-color: lightseagreen;
 }
 
-/* Elemento Checkbox, cuando está marcado */
+/* Element Checkbox, when is checked */
 form fieldset {
   color: green;
   border: 1px solid #ced4da;
@@ -62,19 +87,50 @@ form fieldset {
   padding: 10px;
 }
 
-#partner_permissions {
+#partner_permissions,
+#franchise_permissions,
+#franchise_edit_permissions,
+#partner_edit_permissions,
+#registration_form_roles,
+#user_roles,
+.custom-active-check {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
-#partner_permissions input[type="checkbox"] {
+#partner_permissions input[type="checkbox"],
+#franchise_permissions input[type="checkbox"],
+#franchise_edit_permissions input[type="checkbox"],
+#partner_edit_permissions input[type="checkbox"],
+#registration_form_roles input[type="checkbox"],
+#search_partner input[type="checkbox"],
+#franchise_edit_Active,
+#partner_edit_Active,
+#partner_Active,
+#franchise_Active,
+#user_roles input[type="checkbox"] {
   visibility: hidden;
 }
 
-#partner_permissions input[type="checkbox"] + label {
+#partner_permissions input[type="checkbox"] + label,
+#franchise_permissions input[type="checkbox"] + label,
+#franchise_edit_permissions input[type="checkbox"] + label,
+#partner_edit_permissions input[type="checkbox"] + label,
+#registration_form_roles input[type="checkbox"] + label,
+#franchise_edit_Active,
+#franchise_Active,
+#partner_edit_Active,
+#partner_Active,
+#user_roles input[type="checkbox"] + label,
+.custom-active-check {
   background-color: white;
-  /* Green */
   border: 1px solid #ced4da;
   color: #ced4da;
   padding: 5px 10px;
@@ -85,10 +141,195 @@ form fieldset {
   border-radius: 5px;
 }
 
-#partner_permissions input[type="checkbox"]:checked + label {
+#search_partner input[type="checkbox"] + label {
+  background-color: white;
+  border: 1px solid #ced4da;
+  color: #ced4da;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
+}
+
+#partner_permissions input[type="checkbox"]:checked + label,
+#franchise_permissions input[type="checkbox"]:checked + label,
+#franchise_edit_permissions input[type="checkbox"]:checked + label,
+#partner_edit_permissions input[type="checkbox"]:checked + label,
+#registration_form_roles input[type="checkbox"]:checked + label,
+#search_partner input[type="checkbox"]:checked + label,
+#franchise_edit_Active[type="checkbox"]:checked + label,
+#franchise_Active[type="checkbox"]:checked + label,
+#partner_edit_Active[type="checkbox"]:checked + label,
+#partner_Active[type="checkbox"]:checked + label,
+#user_roles input[type="checkbox"]:checked + label {
   background-color: #4CAF50;
-  /* Green */
   border: none;
   color: white;
+}
+
+#search_partner .form-check {
+  margin: 0;
+  padding: 0;
+}
+
+#search_partner .form-check label {
+  width: 100%;
+}
+
+.form-search button[type="submit"] {
+  width: 100%;
+}
+
+.form-search .btn-reset {
+  width: 100%;
+}
+
+#search_partner_active {
+  display: none;
+}
+
+.card-section {
+  max-width: 1200px;
+}
+
+.card {
+  /* width: 20rem; */
+  margin-bottom: 2rem;
+}
+
+.card:hover {
+  -webkit-box-shadow: 5px 10px 20px 1px rgba(0, 0, 0, 0.253) !important;
+          box-shadow: 5px 10px 20px 1px rgba(0, 0, 0, 0.253) !important;
+}
+
+.card-text {
+  font-size: 0.9rem;
+  padding: 0.4rem 1.9rem;
+}
+
+.overflow {
+  overflow: hidden;
+}
+
+.card-img-top {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: -webkit-transform 0.7s ease;
+  transition: -webkit-transform 0.7s ease;
+  transition: transform 0.7s ease;
+  transition: transform 0.7s ease, -webkit-transform 0.7s ease;
+}
+
+.card-img-top:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+}
+
+.box-over {
+  background-color: transparent;
+  width: 100%;
+  height: 0px;
+  padding: 0 !important;
+  position: relative;
+}
+
+.box-over-item {
+  background-color: transparent;
+  width: 30%;
+}
+
+.box-over-item-white {
+  width: 70%;
+  height: 50px;
+  position: inherit;
+  top: -48px;
+}
+
+.box-over-active {
+  background-color: white;
+}
+
+.no-active {
+  background-color: #dad9d9;
+  color: #717171;
+}
+
+.no-active-image {
+  opacity: 20%;
+}
+
+.image-container {
+  position: relative;
+}
+
+.no-active-message {
+  position: absolute;
+  top: 50px;
+  width: 100%;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.strokeme {
+  color: #fafafa;
+  /* text-shadow: -1.5px -1.5px 0 #000, 1.5px -1.5px 0 #000, -1.5px 1.5px 0 #000, 1.5px 1.5px 0 #000; */
+  -webkit-text-stroke: 0.5px black;
+}
+
+.partner-card-container {
+  max-height: 200px;
+}
+
+.partner-card-show {
+  width: 100%;
+  overflow: hidden;
+}
+
+.partner-show-fields {
+  width: 180px;
+}
+
+.active-filter {
+  list-style: none;
+}
+
+.active-filter li {
+  border: orange solid 1px;
+  border-radius: 5px;
+  margin: 0 5px;
+  padding: 5px 7px;
+}
+
+.filter-active {
+  background-color: orange;
+  font-weight: bolder;
+}
+
+.arrow::before {
+  position: relative;
+  /* top: 3pt; Uncomment this to lower the icons as requested in comments*/
+  content: '';
+  /* By using an em scale, the arrows will size with the font */
+  display: inline-block;
+  width: 0.4em;
+  height: 0.4em;
+  border-right: 0.12em solid rgba(0, 0, 0, 0.87);
+  border-top: 0.12em solid rgba(0, 0, 0, 0.87);
+}
+
+.arrow.left {
+  -webkit-transform: rotate(-135deg) translate(-50%);
+          transform: rotate(-135deg) translate(-50%);
+}
+
+.arrow.right {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.legal-text {
+  text-align: justify;
 }
 /*# sourceMappingURL=custom.css.map */
