--- a/templates/permission/new.html.twig
+++ b/templates/permission/new.html.twig
@@ -32,6 +32,7 @@
     const checkIfImgExists = (image) => {
       const imageNotFound = () => {
         let newImage = document.getElementById('permission-new-image')
+        // Image by default
         newImage.src = "https://www.svgrepo.com/show/340721/no-image.svg"
       };
 
