--- a/templates/react/index.html.twig
+++ b/templates/react/index.html.twig
@@ -7,7 +7,7 @@
     <div class="row">
       <div class='d-flex flex-column justify-content-md-between align-items-center mb-4'>
       
-        <div className='d-flex col-12 col-lg-5 flex-sm-row justify-content-center justify-content-lg-start mb-sm-2 mb-md-3 mb-xl-0'>
+        <div className='d-flex col-12 col-lg-5 flex-sm-row fe justify-content-center justify-content-lg-start mb-sm-2 mb-md-3 mb-xl-0'>
           <h2 className="fw-bold lh-1 mb-0 me-md-3 text-uppercase mb-2 me-4">MES CLUBS</h2>
           <h2 className="fw-bold lh-1 mb-4 mb-sm-0 text-uppercase strokeme">TODAYFIT</h2>
         </div>
