Validations on Partner and Franchise added

--- a/templates/partner/_form.html.twig
+++ b/templates/partner/_form.html.twig
@@ -1,5 +1,5 @@
 {# this form theme will be applied only to the form of this template #}
-{% form_theme form 'bootstrap_5_layout.html.twig' %}
+{# {% form_theme form 'bootstrap_5_layout.html.twig' %} #}
 
 {{ form_start(form) }}
     {{ form_widget(form) }}
