bug in Franchise delete bug solved

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -197,6 +197,14 @@ form fieldset{
   display: none;
 }
 
+
+.delete-btn-container{
+  small{
+    color: red;
+    margin-top: -15px;
+  }
+}
+
 // CARD SECTION
 .card-section{
   max-width: 1200px;
