--- a/templates/franchise/show_admin.html.twig
+++ b/templates/franchise/show_admin.html.twig
@@ -7,10 +7,22 @@
   <section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
 
     {% if is_granted("ROLE_ADMIN") %}
-      <div class="d-flex flex-row align-items-center justify-content-between">
-        <h1 class="text-center">{{ franchise.Name }}</h1>
-        {{ include('franchise/_delete_form.html.twig') }}
-      </div>
+    {% dump(partnersCount) %}
+      {% if partnersCount > 0 %}
+        <div class="d-flex flex-row align-items-center justify-content-between">
+          <h1 class="text-center">{{ franchise.Name }} {{ partnersCount }}</h1>
+          <div class="delete-btn-container d-flex flex-column">
+            <button class="btn btn-danger mt-3" disabled>Supprimer Permission</button>
+            <small class="delete-btn"><i>Suppression non disponible</i></small>
+          </div>
+        </div>
+      {% else %}
+        <div class="d-flex flex-row align-items-center justify-content-between">
+          <h1 class="text-center">{{ franchise.Name }} {{ partnersCount }}</h1>
+          {{ include('franchise/_delete_form.html.twig') }}
+        </div>
+
+      {% endif %}
     {% else %}
       <div class="text-center">
         <h1>{{ franchise.Name }}</h1>
