--- a/templates/franchise/show_admin.html.twig
+++ b/templates/franchise/show_admin.html.twig
@@ -7,22 +7,36 @@
   <section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
 
     {% if is_granted("ROLE_ADMIN") %}
-    {% dump(partnersCount) %}
-      {% if partnersCount > 0 %}
+
         <div class="d-flex flex-row align-items-center justify-content-between">
           <h1 class="text-center">{{ franchise.Name }} {{ partnersCount }}</h1>
-          <div class="delete-btn-container d-flex flex-column">
-            <button class="btn btn-danger mt-3" disabled>Supprimer Permission</button>
-            <small class="delete-btn"><i>Suppression non disponible</i></small>
+          
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Supprimer Franchise
+          </button>
+
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Etes-vous sûre?</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  {% if partnersCount > 0 %}
+                    <p class="delete-btn">Suppression non disponible</p>
+                    <p class="delete-btn"><i>La Franchise {{ franchise.Name }} a {{ partnersCount }} Structures. Vous ne pouvez pas supprimer une Franchise avec des Structures asignées.</i></p>
+                  {% else %}
+                    {{ include('franchise/_delete_form.html.twig') }}
+                  {% endif %}
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      {% else %}
-        <div class="d-flex flex-row align-items-center justify-content-between">
-          <h1 class="text-center">{{ franchise.Name }} {{ partnersCount }}</h1>
-          {{ include('franchise/_delete_form.html.twig') }}
-        </div>
 
-      {% endif %}
     {% else %}
       <div class="text-center">
         <h1>{{ franchise.Name }}</h1>
