--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -8,6 +8,25 @@
 
       {{ include('user/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
       <a href="{{ path('app_user_index') }}" class="btn btn-warning mr-3">Retour à la liste</a>
-      {{ include('user/_delete_form.html.twig') }}
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Supprimer Utilisateur 
+          </button>
+
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Etes-vous sûre?</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <p>Vous allez supprimer l'utilisateur {{ user.email }} </p>
+                  {{ include('user/_delete_form.html.twig') }}
+                </div>
+              </div>
+            </div>
+          </div>
     </section>
 {% endblock %}
