Delete User form updated with all the possibilites from user data

--- a/templates/franchise/show_admin.html.twig
+++ b/templates/franchise/show_admin.html.twig
@@ -9,7 +9,7 @@
     {% if is_granted("ROLE_ADMIN") %}
 
         <div class="d-flex flex-row align-items-center justify-content-between">
-          <h1 class="text-center">{{ franchise.Name }} {{ partnersCount }}</h1>
+          <h1 class="text-center">{{ franchise.Name }}</h1>
           
           <!-- Button trigger modal -->
           <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
