--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -22,8 +22,32 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <p>Vous allez supprimer l'utilisateur {{ user.email }} </p>
-                  {{ include('user/_delete_form.html.twig') }}
+
+                  <p>Vous allez supprimer l'utilisateur <b>{{ user.email }}</b> </p>
+
+                  {% if "ROLE_ADMIN" in user.roles %}
+                    <div class="alert alert-danger">
+                      <p>Vous ne pouvez pas supprimer un utilisateur <b>avec le rôle ADMIN </b></p>
+                    </div>
+                  {% elseif (asignedAs == 'franchise' and partnersCount > 0) %}
+                    <div class="alert alert-danger">
+                      <p>Vous ne pouvez pas supprimer un utilisateur asigné a une <b>Franchise avec des Structures.</b></p>
+                    </div>
+                  {% else %}
+                    <div class="alert alert-danger">
+                      {% if asignedAs == 'partner' %}
+                        <p>La Structure "<b>{{ user.partner.name }}</b>" est liée a cet utilisateur. Si vous supprimez l'utilisateur, <b>vous allez supprimer également la Structure.</b></p>
+                      {% elseif asignedAs == 'franchise' %}
+                        <p>La Frachise "<b>{{ user.franchise.name }}</b>" est liée a cet utilisateur. Si vous supprimez l'utilisateur, <b>vous allez supprimer également la Franchise.</b></p>
+                      {% else %}
+                        <p>L'utilisateur n'a pas de Franchise ni de Structure asignée</p> 
+                      {% endif %}
+                    </div>
+                    
+                    {{ include('user/_delete_form.html.twig') }}
+                  
+                  {% endif %}
+
                 </div>
               </div>
             </div>
