--- a/templates/partner/_delete_form.html.twig
+++ b/templates/partner/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_partner_delete', {'id': partner.id}) }}" onsubmit="return confirm('Etes vous sure?');">
+<form method="post" action="{{ path('app_partner_delete', {'id': partner.id}) }}">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ partner.id) }}">
     <button class="btn btn-danger mt-3">Supprimer Structure</button>
 </form>
