--- a/templates/franchise/show.html.twig
+++ b/templates/franchise/show.html.twig
@@ -33,6 +33,10 @@
         <p class="partner-show-fields"><b>Email:</b></p>
         <p>{{ franchise.user.Email }}</p>
       </div>
+      <div class="d-flex flex-column border-bottom p-1">
+        <p class="partner-show-fields"><b>Description:</b></p>
+        <p>{{ franchise.description }}</p>
+      </div>
 
       <div class="d-flex border-bottom p-1">
         <p class="partner-show-fields"><b>Active:</b></p>
@@ -78,7 +82,7 @@
         {% if is_granted("ROLE_ADMIN") %}
           {% set link = "/structure/show/" %}
         {% else %}
-          {% set link = "/franchise/maFranchise/structure/" %}
+          {% set link = "/franchise/mafranchise/structure/" %}
         {% endif %}
 
         {% for partner in partners %}
