--- a/templates/partner/new.html.twig
+++ b/templates/partner/new.html.twig
@@ -18,35 +18,5 @@
 {% endblock %}
 
 {% block javascripts %}
-  {# let the menu load #}
-  {{ parent() }} 
-  <script>
-    window.onload = () => {
-      let franchise = document.querySelector("#partner_franchise");
-      franchise.addEventListener("change", function(){
-        let form = this.closest("form");
-        let indexData = this.value; // =>return the id
-        let data = this.name + "=" + this.value;
-        
-        fetch(form.action, { 
-          method: form.getAttribute("method"),
-          body: data,
-          headers: {
-            "Content-Type": "application/x-www-form-urlencoded; charset:utf-8"
-          }
-        })
-        .then(response => response.text())
-        .then(html => {
-          let content = document.createElement("html");
-          content.innerHTML = html;
-          let nouveauSelect = content.querySelector("#partner_permissions");
-          console.log(nouveauSelect)
-          document.querySelector("#partner_permissions").replaceWith(nouveauSelect);
-        })
-        .catch(error => {
-          console.log(error)
-        })
-      })
-    }
-  </script>
+    {{ encore_entry_script_tags('dynamicSearchForm') }}
 {% endblock %}
