Email process updated

--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -11,6 +11,6 @@
       <p>
         Le lien expirera dans {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
       </p>
-      <p>Si vous ne recevez pas d'e-mail, veuillew vérifier votre dossier spam ou <a href="{{ path('app_forgot_password_request') }}">réesayez ici</a>.</p>
+      <p>Si vous ne recevez pas d'e-mail, veuillez vérifier votre dossier spam ou <a href="{{ path('app_forgot_password_request') }}">réesayez ici</a>.</p>
     </section>
 {% endblock %}
