--- a/templates/registration/please-verify-email.html.twig
+++ b/templates/registration/please-verify-email.html.twig
@@ -5,6 +5,6 @@
     <h1>S'il vous plait, vérifiez votre email</h1>
     <p><b>Pour acceder à la page vérifiez votre email avec le lien que vous avez reçu sur votre boîte email</b></p>
     <p><i>Vous ne trouvez pas le lien? Avez-vous des difficultées pour réaliser la vérification?</i></p>
-    <p><a href="#" class="">Contactez l'administrateur</a></p>
+    {# <p><a href="#" class="">Contactez l'administrateur</a></p> TODO #}
   </section>
 {% endblock %}
