--- a/templates/permission/edit.html.twig
+++ b/templates/permission/edit.html.twig
@@ -10,7 +10,31 @@
     </div>
 
     {{ include('permission/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
-    {{ include('permission/_delete_form.html.twig') }}
+
+
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      Supprimer Permission
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Etes-vous sûre?</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="alert alert-danger">
+              <p>La Permission <b>{{ permission.name }}</b> sera supprimée</p>
+            </div>
+            {{ include('permission/_delete_form.html.twig') }}
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <a href="{{ path('app_permission_index') }}" class="btn btn-warning">Retourner à la liste</a>
 
@@ -18,5 +42,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    {{ encore_entry_script_tags('editPermission') }}
+  {{ encore_entry_script_tags('editPermission') }}
 {% endblock %}
