--- a/templates/partner/show.html.twig
+++ b/templates/partner/show.html.twig
@@ -81,7 +81,10 @@
           </section>
         {% endif %}
       {% else %}
-        <h2>Vous n'avez pas de Structure</h2>
+        <div class="d-flex flex-column text-center">
+          <h1>Vous n'avez pas de Structure asginée</h1>
+          <h3>Merci de contacter votre responsable de franchise</h3>
+        </div>
       {% endif %}
 
   </section>
