User dynamic search form commented

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -16,7 +16,7 @@
   {# < Card Section #}
   <div class="row">
 
-    <!-- Users Card -->
+    {# Users Card #}
     <div class="col-md-6 mb-4">
         <a href="{{ path('app_user_index') }}" class="text-dark dashboard-card-link">
             <div class="card border-left-primary shadow h-100 py-2">
@@ -45,7 +45,7 @@
         </a>
     </div>
 
-    <!-- Franchises (Monthly) Card -->
+    {# Franchises (Monthly) Card #}
     <div class="col-md-6 mb-4">
         <a href="{{ path('app_franchise_index') }}" class="text-dark dashboard-card-link">
             <div class="card border-start-primary shadow h-100 py-2">
@@ -71,7 +71,7 @@
         </a>
     </div>
 
-    <!-- Structures (Monthly) Card -->
+    {# Structures (Monthly) Card #}
     <div class="col-md-6 mb-4">
         <a href="{{ path('app_partner_index') }}" class="text-dark dashboard-card-link">
             <div class="card border-left-primary shadow h-100 py-2">
@@ -107,7 +107,7 @@
         </a>
     </div>
 
-    <!-- Permissions Card -->
+    {# Permissions Card #}
     <div class="col-md-6 mb-4">
         <a href="{{ path('app_permission_index') }}" class="text-dark dashboard-card-link">
             <div class="card border-left-primary shadow h-100 py-2">
