Some code cleaning + js adjustments

--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -14,14 +14,14 @@
     <section class="container-fluid">
 
       {# Tab navigation #}
-      <ul class="nav nav-tabs mt-3" id="myTab" role="tablist">
+      {# <ul class="nav nav-tabs mt-3" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
           <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Accueil</button>
         </li>
         <li class="nav-item" role="presentation">
           <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Vue en table</button>
         </li>
-      </ul>
+      </ul> #}
       {# Tab navigation #}
 
       {# Tab Content #}
