--- a/templates/partner/new.html.twig
+++ b/templates/partner/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Nouvelle Structure{% endblock %}
 
 {% block body %}
-<section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
+<section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form mb-5">
 
   <div class="container d-flex flex-column justify-content-center">
     <section class="custom-form">
