--- a/templates/permission/edit.html.twig
+++ b/templates/permission/edit.html.twig
@@ -42,5 +42,5 @@
 {% endblock %}
 
 {% block javascripts %}
-  {{ encore_entry_script_tags('editPermission') }}
+  {{ encore_entry_script_tags('permissionForm') }}
 {% endblock %}
