--- a/templates/permission/new.html.twig
+++ b/templates/permission/new.html.twig
@@ -17,5 +17,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    {{ encore_entry_script_tags('newPermission') }}
+    {{ encore_entry_script_tags('permissionForm') }}
 {% endblock %}
