CSS Footer and LoginPage update

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -18,9 +18,11 @@ h2{
   font-family: 'Russo One', sans-serif;
 }
 
+// FOOTER
 footer{
   margin-top: auto;
 }
+
 
 // DASHBOARD ADMIN
 .dashboard-card-link {
