Language login error message to french + personnel email added to Cards in franchises + lang html attribute added to html tag

--- a/templates/franchise/show.html.twig
+++ b/templates/franchise/show.html.twig
@@ -33,6 +33,10 @@
         <p class="partner-show-fields"><b>Email:</b></p>
         <p>{{ franchise.user.Email }}</p>
       </div>
+      <div class="d-flex border-bottom p-1">
+        <p class="partner-show-fields"><b>Email personnel:</b></p>
+        <p>{{ franchise.Email }}</p>
+      </div>
       <div class="d-flex flex-column border-bottom p-1">
         <p class="partner-show-fields"><b>Description:</b></p>
         <p>{{ franchise.description }}</p>
