--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -6,7 +6,7 @@
 <section class="container col-md-8 col-xl-6 bg-light py-5 px-4 custom-form mb-3">
   <form method="post">
       {% if error %}
-          <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+          <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security', 'fr') }}</div>
       {% endif %}
 
       {% if app.user %}
