--- a/templates/franchise/show_admin.html.twig
+++ b/templates/franchise/show_admin.html.twig
@@ -34,6 +34,10 @@
         <p class="partner-show-fields"><b>Email:</b></p>
         <p>{{ franchise.user.Email }}</p>
       </div>
+      <div class="d-flex border-bottom p-1">
+        <p class="partner-show-fields"><b>Email personnel:</b></p>
+        <p>{{ franchise.Email }}</p>
+      </div>
 
       <div class="d-flex border-bottom p-1">
         <p class="partner-show-fields"><b>Active:</b></p>
