--- a/templates/permission/new.html.twig
+++ b/templates/permission/new.html.twig
@@ -7,7 +7,7 @@
 
     <div class="d-flex flex-row col-12">
       <h1 class="col-10">Nouvelle Permission</h1>
-      <img src="https://www.svgrepo.com/show/340721/no-image.svg" alt="Today Fit Permission Image" width="50px" class="col-2" id="permission-new-image">
+      <img src="https://www.svgrepo.com/show/340721/no-image.svg" alt="Today Fit Permission Image" width="50px" class="col-2" id="permission-pic">
     </div>
 
     {{ include('permission/_form.html.twig') }}
